--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "sound-visualizer",
-  "version": "0.0.6-alpha",
+  "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "devDependencies": {
