--- a/package.json
+++ b/package.json
@@ -2,12 +2,85 @@
   "name": "sound-visualizer",
   "version": "1.1.0",
   "description": "",
-  "main": "index.js",
+  "main": "./lib/index.js",
+  "module": "./lib/index.mjs",
+  "types": "./lib/index.d.ts",
+  "files": ["./lib"],
+  "exports": {
+    ".": {
+      "require": "./lib/index.js",
+      "import": "./lib/index.mjs",
+      "types": "./lib/index.d.ts"
+    },
+    "./lib/common/draw/pure": {
+      "require": "./lib/common/draw/pure.js",
+      "import": "./lib/common/draw/pure.mjs",
+      "types": "./lib/common/draw/pure.d.ts"
+    },
+    "./lib/common/draw/impure": {
+      "require": "./lib/common/draw/impure.js",
+      "import": "./lib/common/draw/impure.mjs",
+      "types": "./lib/common/draw/impure.d.ts"
+    },
+    "./lib/common/draw/options": {
+      "require": "./lib/common/draw/options.js",
+      "import": "./lib/common/draw/options.mjs",
+      "types": "./lib/common/draw/options.d.ts"
+    },
+    "./lib/common/visualizer.type": {
+      "require": "./lib/common/visualizer.type.js",
+      "import": "./lib/common/visualizer.type.mjs",
+      "types": "./lib/common/visualizer.type.d.ts"
+    },
+    "./lib/current/main": {
+      "require": "./lib/current/main.js",
+      "import": "./lib/current/main.mjs",
+      "types": "./lib/current/main.d.ts"
+    },
+    "./lib/current/draw/options": {
+      "require": "./lib/current/draw/options.js",
+      "import": "./lib/current/draw/options.mjs",
+      "types": "./lib/current/draw/options.d.ts"
+    },
+    "./lib/current/draw/impure": {
+      "require": "./lib/current/draw/impure.js",
+      "import": "./lib/current/draw/impure.mjs",
+      "types": "./lib/current/draw/impure.d.ts"
+    },
+    "./lib/continuous/main": {
+      "require": "./lib/continuous/main.js",
+      "import": "./lib/continuous/main.mjs",
+      "types": "./lib/continuous/main.d.ts"
+    },
+    "./lib/continuous/draw/options": {
+      "require": "./lib/continuous/draw/options.js",
+      "import": "./lib/continuous/draw/options.mjs",
+      "types": "./lib/continuous/draw/options.d.ts"
+    },
+    "./lib/continuous/draw/impure": {
+      "require": "./lib/continuous/draw/impure.js",
+      "import": "./lib/continuous/draw/impure.mjs",
+      "types": "./lib/continuous/draw/impure.d.ts"
+    },
+    "./lib/continuous/draw/pure": {
+      "require": "./lib/continuous/draw/pure.js",
+      "import": "./lib/continuous/draw/pure.mjs",
+      "types": "./lib/continuous/draw/pure.d.ts"
+    },
+    "./lib/continuous/wave/pure": {
+      "require": "./lib/continuous/wave/pure.js",
+      "import": "./lib/continuous/wave/pure.mjs",
+      "types": "./lib/continuous/wave/pure.d.ts"
+    }
+  },
   "devDependencies": {
+    "tsup": "^7.2.0",
     "typescript": "^4.9.5"
   },
   "scripts": {
-    "build": "tsc && cp ./package.json ./dist/package.json && cp ./README.md ./dist/README.md"
+    "prepublish": "npm run build",
+    "prepack": "npm run build",
+    "build": "npx tsup ./src/ --format cjs,esm --dts --clean --out-dir lib"
   },
   "repository": {
     "type": "git",
@@ -30,7 +103,6 @@
   ],
   "author": "ej-shafran",
   "license": "ISC",
-  "types": "./index.d.ts",
   "bugs": {
     "url": "https://github.com/ej-shafran/audio-visualizer/issues"
   },
