--- a/package.json
+++ b/package.json
@@ -1,11 +1,13 @@
 {
   "name": "sound-visualizer",
-  "version": "1.1.0",
+  "version": "1.2.0",
   "description": "",
   "main": "./lib/index.js",
   "module": "./lib/index.mjs",
   "types": "./lib/index.d.ts",
-  "files": ["./lib"],
+  "files": [
+    "./lib"
+  ],
   "exports": {
     ".": {
       "require": "./lib/index.js",
